fixed inablilty to click map points behind closed infowindow

--- a/less/infowindow.less
+++ b/less/infowindow.less
@@ -100,7 +100,6 @@ div.infowindow {
   }
 
   &.open {
-    z-index: 25;
     transition-delay: 1100ms;
     transition-duration: 700ms;
     .box-shadow(1px 1px 2px rgba(0,0,0,0.3));
